2013-08-06  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (0.3.6)

	- Replace bunch of code to convert mesh to segmentation mask by
	function scimat_closed_surf_to_bw().

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (0.3.5)

	- Fix syntax. The input argument we use is the radius of the alpha
	shape, not the alpha value. In fact, alpha=radius^2.

	- Add commented out code to compute the alpha shape with
	cgal_fixed_alpha_shape3() instead of alphavol(). The CGAL code is
	slower (because of the Delaunay triangulation), and we won't use
	it.

	* CMakeLists.txt: (0.5.5)

	- Fix bug. Make previous change work in Windows too. For Windows,
	the directory for Boost libraries is gerardus/lib, as that's where
	they get built and installed (in Windows, we cannot use the Boost
	libraries released with Matlab).

	* matlab/CgalToolbox/CMakeLists.txt: (0.2.12)

	- Fix bug. Make previous change work in Windows too. In Windows,
	adding Boost_THREAD_LIBRARY to the list of libraries linked to by
	cgal_check_self_intersect erroneously duplicates symbols.

	* CMakeLists.txt: (0.5.4)

	- Fix bug. In Linux and Mac, the binaries had broken links to the
	Boost libraries. For example, linked to libbost_system.so.1.44.0
	but in the gerardus/lib directory, that only contained the
	softlink libbost_system.so. Hence, the binary could not find the
	library.

	To fix it, we no longer soft link to the Boost libraries from
	gerardus/lib. Instead, in Linux and Mac we look for the actual
	boost libraries in the Matlab directory, and link directly to
	them.

	* matlab/CgalToolbox/CMakeLists.txt: (0.2.11)

	- Fix bug. cgal_check_self_intersect needs to be explicitly linked
	to the Boost_THREAD_LIBRARY.

	* matlab/CgalToolbox/CgalFixedAlphaShape3.cpp: (0.1.2)

	- Add debug messages for time profiling.

	* Add matlab/CgalToolbox/CgalFixedAlphaShape3.cpp: (0.1.0)
	* Add matlab/CgalToolbox/cgal_fixed_alpha_shape3.m: (0.1.0)